--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,9 +6,17 @@ environment:
   sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
+  flutter:
+    sdk: flutter
+  cupertino_icons: ^1.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.13
+  path_provider: ^2.0.14
  
 dev_dependencies:
+  build_runner: ^2.3.3
+  test:
+  flutter_test:
+    sdk: flutter
+  hive_generator: ^2.0.0
   very_good_analysis: ^3.1.0
