--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.14
+  path_provider: ^2.0.15
+  mockito: ^5.4.0
  
 dev_dependencies:
   build_runner: ^2.3.3
